Management page Added

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                                        
                                                         <a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">About <b class = "caret"></b></a>
                                                         <ul class = "dropdown-menu">
-                                                                <li><a href = "https://twitter.com/calbiztrends">Management</a></li>
+                                                                <li><a href = "team.html">Management</a></li>
                                                                 <li><a href = "https://www.facebook.com/cabusinesstrends">Code of Conduct</a></li>
                                                                 <li><a href = "https://www.facebook.com/cabusinesstrends">Business Process</a></li>
                                                                 <li><a href = "https://www.facebook.com/cabusinesstrends">Locations</a></li>
