--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                                                        
                                                         <a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Products <b class = "caret"></b></a>
                                                         <ul class = "dropdown-menu">
-                                                                <li><a href = "https://twitter.com/calbiztrends">Mobile</a></li>
-                                                                <li><a href = "https://www.facebook.com/cabusinesstrends">Big Data</a></li>
-                                                                <li><a href = "https://www.facebook.com/cabusinesstrends">IOE/IOT</a></li>
+                                                                <li><a href = "mobile.html">Mobile</a></li>
+                                                                <li><a href = "bigdata.html">Big Data</a></li>
+                                                                <li><a href = "iot.html">IOE/IOT</a></li>
                                                         </ul>
                                                
                                                 </li>
