--- a/iot.html
+++ b/iot.html
@@ -86,12 +86,12 @@
         </div>
         <!--/span-->
         <div class="col-md-6">
-            <div class="jumbotron">
-                 <h1>Hello, world!</h1>
+             <div class="jumbotron">
+                 <h1>IOE/IOT</h1>
 
-                <p>This is a template for a simple marketing or informational website. It
-                    includes a large callout called the hero unit and three supporting pieces
-                    of content. Use it as a starting point to create something more unique.</p>
+                <p>Squashy armchairs dirt on your nose brass scales crush the Sopophorous bean with flat side of silver dagger, releases juice better than cutting. Full moon Whomping Willow three turns should do it lemon drops. Locomotor trunks owl treats that will be 50 points, Mr. Potter. Witch Weekly, he will rise again and he will come for us, headmaster Erumpent horn. Fenrir Grayback horseless carriages ‘zis is a chance many would die for!</p>
+
+                <p>Prefect’s bathrom Trelawney veela squashy armchairs, SPEW: Gamp’s Elemental Law of Transfiguration. Magic Nagini bezoar, Hippogriffs Headless Hunt giant squid petrified. Beuxbatons flying half-blood revision schedule, Great Hall aurors Minerva McGonagall Polyjuice Potion. Restricted section the Burrow Wronski Feint gnomes, quidditch robes detention, chocolate frogs. Errol parchment knickerbocker glory Avada Kedavra Shell Cottage beaded bag portrait vulture-hat. Twin cores, Aragog crimson gargoyles, Room of Requirement counter-clockwise Shrieking Shack. Snivellus second floor bathrooms vanishing cabinet Wizard Chess, are you a witch or not?</p>
                 <p><a class="btn btn-primary btn-lg">Learn more »</a>
                 </p>
             </div>
