Big Data Papers

--- a/bigdata.html
+++ b/bigdata.html
@@ -50,36 +50,21 @@
 			</div>
 		</div>
 	</header>
-	
-	<div class="row">
 		
+	<div class="row">
+
 		<div class="col-md-2">
-			<div class="col-sm-3 col-md-2 sidebar">
+			<div class="sidebar">
 				<ul class="nav nav-sidebar">
-					<li class="active"><a href="index.html">Overview</a></li>
-					<li><a href="investor_trend.html">Investor Trends</a></li>
-					<li><a href="number_companies.html">Companies vs
-							Categories</a></li>
+					<li class="active"><h4 >Big Data White Papers</h4></li>
+					<li ><a href="/whitepaper/bigdata/big-data-for-enterprise-519135.pdf">Big Data for Enterprise</a></li>
+					<li><a href="/whitepaper/bigdata/big-data-meets-big-data-analytics-105777.pdf">Big Data and SAS</a></li>
+					<li><a href="/whitepaper/bigdata/bigdatawhitepaper.pdf">Big Data Challenges</a></li>
+					<li><a href="/whitepaper/bigdata/NESSI_WhitePaper_BigData.pdf">Big Data Opportunities</a></li>
+					<li><a href="/whitepaper/bigdata/wp-big-data.pdf">Big Data and Analytics</a></li>
+					<li><a href="/whitepaper/bigdata/WP-DataStax-BigData.pdf">Big Data Beyond the Hype</a></li>
 				</ul>
-				<ul class="nav nav-sidebar">
-					<li><a href="top_acquisition.html">Top Acquisitions</a></li>
-					<li><a href="top_acquirer.html">Top Acquirers</a></li>
-				</ul>
-				<ul class="nav nav-sidebar">
-					<li><a href="state.html">Statewise Company Data</a></li>
-					<li><a href="region_wise.html">Regionwise Company Data</a></li>
-				</ul>
-				<ul class="nav nav-sidebar">
-					<li><a href="investment.html">Top Investments vs <br>Top
-							Categories
-					</a></li>
-					<li><a href="investor_Ex.html">Rounds of Investments</a></li>
-				</ul>
-				<ul class="nav nav-sidebar">
-					<li><a href="top_funded_companies.html">Top Funded Company</a></li>
-					<li><a href="funding.html">Funding vs Category</a></li>
-					<li><a href="global_stat1.html">Recent Funding Trends</a></li>
-				</ul>
+				
 			</div>
 		</div>
 		
