--- a/bigdata.html
+++ b/bigdata.html
@@ -50,24 +50,32 @@
 			</div>
 		</div>
 	</header>
-		
+
 	<div class="row">
 
 		<div class="col-md-2">
 			<div class="sidebar">
 				<ul class="nav nav-sidebar">
-					<li class="active"><h4 >Big Data White Papers</h4></li>
-					<li ><a href="/whitepaper/bigdata/big-data-for-enterprise-519135.pdf">Big Data for Enterprise</a></li>
-					<li><a href="/whitepaper/bigdata/big-data-meets-big-data-analytics-105777.pdf">Big Data and SAS</a></li>
-					<li><a href="/whitepaper/bigdata/bigdatawhitepaper.pdf">Big Data Challenges</a></li>
-					<li><a href="/whitepaper/bigdata/NESSI_WhitePaper_BigData.pdf">Big Data Opportunities</a></li>
-					<li><a href="/whitepaper/bigdata/wp-big-data.pdf">Big Data and Analytics</a></li>
-					<li><a href="/whitepaper/bigdata/WP-DataStax-BigData.pdf">Big Data Beyond the Hype</a></li>
+					<li class="active"><h4>Big Data White Papers</h4></li>
+					<li><a
+						href="/whitepaper/bigdata/big-data-for-enterprise-519135.pdf">Big
+							Data for Enterprise</a></li>
+					<li><a
+						href="/whitepaper/bigdata/big-data-meets-big-data-analytics-105777.pdf">Big
+							Data and SAS</a></li>
+					<li><a href="/whitepaper/bigdata/bigdatawhitepaper.pdf">Big
+							Data Challenges</a></li>
+					<li><a href="/whitepaper/bigdata/NESSI_WhitePaper_BigData.pdf">Big
+							Data Opportunities</a></li>
+					<li><a href="/whitepaper/bigdata/wp-big-data.pdf">Big Data
+							and Analytics</a></li>
+					<li><a href="/whitepaper/bigdata/WP-DataStax-BigData.pdf">Big
+							Data Beyond the Hype</a></li>
 				</ul>
-				
+
 			</div>
 		</div>
-		
+
 		<div class="col-md-8">
 			<div>
 				<h2 align="center">Big Data</h2>
@@ -88,39 +96,39 @@
 					to uncover large hidden values from large datasets that are
 					diverse, complex, and of a massive scale</p>
 			</div>
-			<div style="left: 200px; position: relative;">
-				<iframe width="420" height="300"
+			<div style="left: 200px; position: relative;"
+				class="embed-responsive embed-responsive-4by3">
+				<iframe width="420" height="300" class="embed-responsive-item"
 					src="https://www.youtube.com/embed/8pHzROP1D-w"></iframe>
 			</div>
 		</div>
-		
+
 		<div class="col-md-2">
 			<div class="col-sm-3 col-md-10 sidebar1" id="sidebar1">
 				<ul class="nav nav-sidebar">
-					<li class="active"><a href="index.html">Overview</a></li>
-					<li><a href="investor_trend.html">Investor Trends</a></li>
-					<li><a href="number_companies.html">Companies vs
-							Categories</a></li>
+					<li class="active"><h4>Customer Accolades</h4></li>
+					<li>
+						<div class="col-md-11">
+							<p style="width: 200px; text-align: justify;">&quot;If you are familiar with Big
+								Data, then this is one great product. It is actually a product
+								within a product, as you can use a select number of Big Data
+								products as an option. Still finding my way around, but so far,
+								it is all there&quot;</p>
+							<p class="review-name">By Akhil, April 3, 2014</p>
+						</div>
+					</li>
+					<li>
+						<div class="col-md-11">
+							<p style="width: 200px; text-align: justify;">&quot;Seriously, it works awesome
+								and looks awesome right out of the box. Can only get better and
+								better with the awesome support. &quot;</p>
+							<p class="review-name">By Nishant, November 6, 2014</p>
+						</div>
+					</li>
+					
+
 				</ul>
-				<ul class="nav nav-sidebar">
-					<li><a href="top_acquisition.html">Top Acquisitions</a></li>
-					<li><a href="top_acquirer.html">Top Acquirers</a></li>
-				</ul>
-				<ul class="nav nav-sidebar">
-					<li><a href="state.html">Statewise Company Data</a></li>
-					<li><a href="region_wise.html">Regionwise Company Data</a></li>
-				</ul>
-				<ul class="nav nav-sidebar">
-					<li><a href="investment.html">Top Investments vs <br>Top
-							Categories
-					</a></li>
-					<li><a href="investor_Ex.html">Rounds of Investments</a></li>
-				</ul>
-				<ul class="nav nav-sidebar">
-					<li><a href="top_funded_companies.html">Top Funded Company</a></li>
-					<li><a href="funding.html">Funding vs Category</a></li>
-					<li><a href="global_stat1.html">Recent Funding Trends</a></li>
-				</ul>
+
 			</div>
 
 		</div>
