--- a/team.html
+++ b/team.html
@@ -85,40 +85,40 @@
             <div class="col-lg-12">
                 <h2 class="page-header">Our Team</h2>
             </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
+            <div class="col-lg-3 col-sm-6 text-center">
+                <img class="img-circle img-responsive img-center" src="../img/ankit.jpg" alt="Ankit">
+                <h3>Ankit Devani
+                     <!-- <small>Job Title</small> -->
                 </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+               <!-- <p>What does this team member to? Keep it short! This is also a great spot for social links!</p> -->
+            </div>
+            <div class="col-lg-3 col-sm-6 text-center">
+                <img class="img-circle img-responsive img-center" src="../img/harsh.jpg" alt="Harsh">
+                <h3>Harsh Shah
+                     <!-- <small>Job Title</small> -->
+                </h3>
+                <!-- <p>What does this team member to? Keep it short! This is also a great spot for social links!</p> -->
+            </div>
+            <div class="col-lg-3 col-sm-6 text-center">
+                <img class="img-circle img-responsive img-center" src="../img/hitesh.jpg" alt="Hitesh">
+                <h3>Hitesh Basantani
+                    <!-- <small>Job Title</small> -->
+                </h3>
+                <!-- <p>What does this team member to? Keep it short! This is also a great spot for social links!</p> -->
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
+                <img class="img-circle img-responsive img-center" src="../img/rohan.jpg" alt="Rohan">
+                <h3>Rohan Bhanderi
+                     <!-- <small>Job Title</small> -->
                 </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+                <!-- <p>What does this team member to? Keep it short! This is also a great spot for social links!</p> -->
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
+                <img class="img-circle img-responsive img-center" src="../img/sanket.jpg" alt="Sanket">
+                <h3>Sanket Desai
+                    <!-- <small>Job Title</small> -->
                 </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+               <!-- <p>What does this team member to? Keep it short! This is also a great spot for social links!</p> -->
             </div>
         </div>
     </div>
