--- a/IoT2.html
+++ b/IoT2.html
@@ -71,13 +71,13 @@
 					<li class="active">
 					  <h4 id = "papers">IoT White Papers</h4></li>
 					<li><a
-						href="/whitepaper/IoT/IotGSMA.pdf">Understanding IoT</a></li>
+						href="/whitepaper/iot/IotGSMA.pdf">Understanding IoT</a></li>
 					<li><a
-						href="/whitepaper/IoT/IotTI.pdf">Evoloution
+						href="/whitepaper/iot/IotTI.pdf">Evoloution
 							of IoT</a></li>
-					<li><a href="/whitepaper/IoT/IotCisco.pdf">Next 
+					<li><a href="/whitepaper/iot/IotCisco.pdf">Next 
 							Evolution of IoT</a></li>
-					<li><a href="/whitepaper/IoT/IotMicrosoft.pdf">Creating Your
+					<li><a href="/whitepaper/iot/IotMicrosoft.pdf">Creating Your
 							Own Iot</a></li>
 				</ul>
 
