--- a/bigdata.html
+++ b/bigdata.html
@@ -20,7 +20,7 @@
 			
 		$("#myModal").modal('show');
 			$('#download').click(function(){
-				$("#myModal").modal('hide');
+			//	$("#myModal").modal('hide');
 				alert(href);
 			})
 
