--- a/IoT2.html
+++ b/IoT2.html
@@ -27,7 +27,7 @@
 <body>
 	<header class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container-fluid">
-			<a href="#" class="navbar-brand"><strong>Innovative
+			<a href="index.html" class="navbar-brand"><strong>Innovative
 					Solutions</strong></a>
 
 			<button class="navbar-toggle" data-toggle="collapse"
@@ -40,26 +40,26 @@
 
 				<ul class="nav navbar-nav navbar-right">
 
-					<li class="active"><a href="#">Home</a></li>
+					<li class="active"><a href="index.html">Home</a></li>
 					<li class="dropdown"><a href="#" class="dropdown-toggle"
 						data-toggle="dropdown">Products <b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="https://twitter.com/calbiztrends">Mobile</a></li>
-							<li><a href="https://www.facebook.com/cabusinesstrends">Big
+							<li><a href="mobile.html">Mobile</a></li>
+							<li><a href="bigdata.html">Big
 									Data</a></li>
-							<li><a href="https://www.facebook.com/cabusinesstrends">IOE/IOT</a></li>
+							<li><a href="IoT2.html">IOE/IOT</a></li>
 						</ul></li>
 
 					<li class="dropdown"><a href="#" class="dropdown-toggle"
 						data-toggle="dropdown">About <b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="https://twitter.com/calbiztrends">Management</a></li>
-							<li><a href="https://www.facebook.com/cabusinesstrends">Code
+							<li><a href="team.html">Management</a></li>
+							<li><a href="codeOfConduct.html">Code
 									of Conduct</a></li>
-							<li><a href="https://www.facebook.com/cabusinesstrends">Business
+							<li><a href="businessProcess.html">Business
 									Process</a></li>
-							<li><a href="https://www.facebook.com/cabusinesstrends">Locations</a></li>
-							<li><a href="https://www.facebook.com/cabusinesstrends">Contacts</a></li>
+							<li><a href="locations.html">Locations</a></li>
+							<li><a href="contacts.html">Contacts</a></li>
 						</ul></li>
 				</ul>
 			</div>
@@ -101,7 +101,7 @@
 			<br>
 			<br>
 			<div class = "row" id = "rowpanel">
-				
+
 			<div class="col-md-4">
 				
 				<div class="well well-sm">
