--- a/team.html
+++ b/team.html
@@ -67,18 +67,18 @@
                 <h1 class="page-header">About Us
                     <small>It's Nice to Meet You!</small>
                 </h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
+                <p>We are a team of five Software Engineers leaving our mark since 2011. We are currently pursuing our dream i.e  MS in Software Enginnering. Being in IT industry we know the feeling when we get stuck with a annoying silly problem and the joy we feel when we come across the appropriate solution on some random online page posted by somebody ingenious.</p>
             </div>
         </div>
         <!-- Team Members Row -->
         <div class="row">
-            <div class="col-lg-4">
+            <div class="col-lg-3">
                 <h2 class="page-header">News</h2>
                 <div>
                     <script src="http://nmp.newsgator.com/NGBuzz/buzz.ashx?buzzId=81519&apiToken=C9A08C5818F54101B19714C0283D5F70&trkP=&trkM=B3AA8BF8-9242-6D29-39CA-1127C08F8AE2" type="text/javascript"></script>
                 </div>
             </div>
-        <div class="col-lg-8">
+        <div class="col-lg-9">
             <div class="col-lg-12">
                 <h2 class="page-header">Our Team</h2>
             </div>
