--- a/public/bigdata.html
+++ b/public/bigdata.html
@@ -36,7 +36,7 @@
 				 $.ajax({
 					type: "POST",
 					contentType: "application/json",
-					url: "https://snketdesai-github-io-rohanbhanderi.c9.io/",
+					url: "http://innovativesolutions-team5.rhcloud.com/",
 					data: mongoJson,
 					dataType: "json",
 					success:function(data,status,jqXHR){
