Node.js for Mobile and IOT pages

--- a/public/IoT2.html
+++ b/public/IoT2.html
@@ -9,6 +9,8 @@
 <link href="css/dashboard.css" rel="stylesheet">
 <link href="css/sticky-footer-navbar.css" rel="stylesheet">
 <link href="css/theme.css" rel="stylesheet">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="js/bootstrap.js"></script>
 <style type="text/css">
 #papers{
 	text-align: center;
