--- a/public/mobile.html
+++ b/public/mobile.html
@@ -8,6 +8,8 @@
 <link href="css/dashboard.css" rel="stylesheet">
 <link href="css/sticky-footer-navbar.css" rel="stylesheet">
 <link href="css/theme.css" rel="stylesheet">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="js/bootstrap.js"></script>
 <script src="js/user.js" type="text/javascript"></script>
 </head>
 <body>
@@ -73,7 +75,7 @@
         <div class="col-md-8">
             <div>
 
-            
+
                 <!-- MODAL AAAAAAAAAAAAAAAAAAAAAAAAA-->
 
                 <div id="myModal" class="modal fade">
@@ -159,9 +161,5 @@
         </footer>
 
     </div>
-
-    <script
-        src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="js/bootstrap.js"></script>
 </body>
 </html>
