--- a/public/index.html
+++ b/public/index.html
@@ -118,13 +118,13 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active" align="center">
-      <img src="img/finance1.jpg" alt="Beach">
+      <img src="img/mobile.jpg" alt="Beach" height="600" width="400">
     </div>
     <div class="item" align="center">
-      <img src="img/finance2.jpg" alt="Sky">
+      <img src="img/bigdata.jpg" alt="Sky" height="600" width="400">
     </div>
     <div class="item" align="center">
-      <img src="img/finance3.png" alt="Sand">
+      <img src="img/iot.jpg" alt="Sand" height="600" width="400">
     </div>
   </div>
 
