--- a/public/IoT2.html
+++ b/public/IoT2.html
@@ -136,9 +136,14 @@
 
 			  <p>Besides the plethora of new application areas for Internet connected automation to expand into, IoT is also expected to generate large amounts of data from diverse locations that is aggregated very quickly, thereby increasing the need to better index, store and process such data.</p>
 			</div>
-			<div style="left: 200px; position: relative;"
+		<!--	<div style="left: 200px; position: relative;"
 				class="embed-responsive embed-responsive-4by3">
 				<iframe width="420" height="300" class="embed-responsive-item" src="https://www.youtube.com/watch?v=qA1Nt_0XomY"></iframe>
+			</div>-->
+			<div style="left: 200px; position: relative;"
+				class="embed-responsive embed-responsive-4by3">
+				<iframe width="420" height="300" class="embed-responsive-item"
+					src="https://www.youtube.com/embed/8pHzROP1D-w"></iframe>
 			</div>
 			<br>
 			<br>
