--- a/public/IoT2.html
+++ b/public/IoT2.html
@@ -142,8 +142,9 @@
 			</div>-->
 			<div style="left: 200px; position: relative;"
 				class="embed-responsive embed-responsive-4by3">
-				<iframe width="420" height="300" class="embed-responsive-item"
-					src="https://www.youtube.com/watch?v=QBDShp6U7tU"></iframe>
+			<!--	<iframe width="420" height="300" class="embed-responsive-item"
+					src="https://www.youtube.com/watch?v=QBDShp6U7tU"></iframe>-->
+					<iframe width="420" height="300" src="https://www.youtube.com/embed/QBDShp6U7tU?feature=player_detailpage" frameborder="0" allowfullscreen></iframe>
 			</div>
 			<br>
 			<br>
