--- a/public/bigdata.html
+++ b/public/bigdata.html
@@ -8,7 +8,16 @@
 <link href="css/dashboard.css" rel="stylesheet">
 <link href="css/sticky-footer-navbar.css" rel="stylesheet">
 <link href="css/theme.css" rel="stylesheet">
-
+<style type="text/css">
+#papers{
+	text-align: center;
+	padding-top: 5px;
+}
+#accolades{
+	text-align: center;
+	padding-top: 5px;
+}
+</style>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="js/bootstrap.js"></script>
@@ -73,7 +82,7 @@
 		<div class="col-md-2">
 			<div class="sidebar">
 				<ul class="nav nav-sidebar">
-					<li class="active"><h4>Big Data White Papers</h4></li>
+					<li class="active"><h4 id = "papers">Big Data White Papers</h4></li>
 					<li class="whitePaper" value="/whitepaper/bigdata/big-data-for-enterprise-519135.pdf">
 						<a>Big
 							Data for Enterprise</a></li>
@@ -161,7 +170,7 @@
 		<div class="col-md-2">
 			<div class="col-sm-3 col-md-10 sidebar1" id="sidebar1">
 				<ul class="nav nav-sidebar">
-					<li class="active"><h4>Customer Accolades</h4></li>
+					<li class="active"><h4 id = "accolades">Customer Accolades</h4></li>
 					<li>
 						<div class="col-md-11">
 							<p style="width: 200px; text-align: justify;">&quot;If you are familiar with Big
