--- a/public/mobile.html
+++ b/public/mobile.html
@@ -11,6 +11,16 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="js/bootstrap.js"></script>
 <script src="js/user.js" type="text/javascript"></script>
+<style type="text/css">
+#papers{
+	text-align: center;
+	padding-top: 5px;
+}
+#accolades{
+	text-align: center;
+	padding-top: 5px;
+}
+</style>
 </head>
 <body>
     <header class="navbar navbar-inverse navbar-fixed-top">
@@ -59,7 +69,7 @@
         <div class="col-md-2">
             <div class="sidebar">
                 <ul class="nav nav-sidebar">
-                    <li class="active"><h4>Mobile App White Papers</h4></li>
+                    <li class="active"><h4 id = "papers">Mobile App White Papers</h4></li>
                     <li class="whitePaper" value="/whitepaper/mobile/implementing-a-cross-platform.pdf"><a
                         >Cross-Platform Framework</a></li>
                     <li class="whitePaper" value ="/whitepaper/mobile/mobile-app-development-framework.pdf"><a >Build your own Framework
@@ -129,7 +139,7 @@
         <div class="col-md-2">
             <div class="col-sm-3 col-md-10 sidebar1" id="sidebar1">
                 <ul class="nav nav-sidebar">
-                    <li class="active"><h4>Customer Accolades</h4></li>
+                    <li class="active"><h4 id = "accolades">Customer Accolades</h4></li>
                     <li>
                         <div class="col-md-11">
                             <p style="width: 200px; text-align: justify;">&quot;
