--- a/public/IoT2.html
+++ b/public/IoT2.html
@@ -25,7 +25,7 @@
 }
 </style>
 <script
-		src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="js/bootstrap.js"></script>
 <script src="js/user.js" type="text/javascript"></script>
 </head>
@@ -78,14 +78,14 @@
 				<ul class="nav nav-sidebar">
 					<li class="active">
 					  <h4 id = "papers">IoT White Papers</h4></li>
-					<li class = "whitePaper" value="public/whitepaper/iot/IotGSMA.pdf"><a
+					<li class = "whitePaper" value="/whitepaper/iot/IotGSMA.pdf"><a
 						>Understanding IoT</a></li>
-					<li class="whitePaper" value="public/whitepaper/iot/IotTI.pdf"><a
+					<li class="whitePaper" value="/whitepaper/iot/IotTI.pdf"><a
 						>Evoloution
 							of IoT</a></li>
-					<li class="whitePaper" value="public/whitepaper/iot/IoTCisco.pdf"><a >Next 
+					<li class="whitePaper" value="/whitepaper/iot/IoTCisco.pdf"><a >Next 
 							Evolution of IoT</a></li>
-					<li class="whitePaper"  value="public/whitepaper/iot/Microsoft_Internet_of_Things_White_Paper.pdf"><a >Creating Your
+					<li class="whitePaper"  value="/whitepaper/iot/MicrosoftPaper.pdf"><a >Creating Your
 							Own Iot</a></li>
 				</ul>
 
